# edms

./: Cargo.toml  Dockerfile  README.md  config.yaml  demo.db  edms.db  h origin main --force  index.html  seed_data.sql
backend/webserver/: .gitignore  Cargo.toml  Dockerfile  config.yaml
backend/webserver/libs/edms/: Cargo.toml
backend/webserver/libs/edms/examples/: analytics.rs  basic_usage.rs  tag_search.rs
backend/webserver/libs/edms/src/: base.rs  error.rs  file_io.rs  json_validator.rs  lib.rs  queries.yaml  query_loader.rs  sqlite_utils.rs
backend/webserver/libs/edms/src/ops/: mod.rs  request_ops.rs
backend/webserver/src/: config.rs  db.rs  events.rs  ipc.rs  main.rs  state.rs  timer.rs
backend/webserver/src/handlers/: bookmarks.rs  callback.rs  dataview.rs  echo.rs  health.rs  hello.rs  mod.rs  repo.rs  test_view.rs  view.rs
edms_data/cat-fact/: response-001.json
edms_data/cat-facts-5/: response-002.json
edms_data/dog-breeds/: response-001.json
edms_data/dog-hound/: response-001.json
edms_data/dog-random/: response-001.json  response-002.json
edms_data/github-octocat/: response-001.json
edms_data/httpbin-anything/: response-001.json
edms_data/httpbin-delay-1/: response-001.json
edms_data/httpbin-get/: response-001.json  response-002.json  response-003.json  response-004.json
edms_data/httpbin-gzip/: response-001.json
edms_data/httpbin-post/: response-001.json
edms_data/httpbin-status-201/: response-001.json
edms_data/httpbin-user-agent/: response-001.json  response-002.json
edms_data/joke-random/: response-001.json
edms_data/jp-comments/: response-001.json
edms_data/jp-photos/: response-002.json  response-004.json
libs/edms/: schema.ipynb
src/: config.rs  db.rs  events.rs  ipc.rs  main.rs  state.rs  timer.rs
(+37 files in other folders)
