[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
