[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

# The main webserver binary (parent)
[[bin]]
name = "rust-webserver"
path = "src/main.rs"

[[bin]]
name = "edms-child"
path = "src/bin/child.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
serde_yaml = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
edms = { path = "libs/edms" }